Attempting again to fix overlap

--- a/client/src/styles/Projects.css
+++ b/client/src/styles/Projects.css
@@ -214,10 +214,10 @@
 }
 
 @media (max-width: 580px) {
-  .projects .projects-content .carousel .card .box {
+  /* .projects .projects-content .carousel .card .box {
     padding-bottom: 0px;
     margin-bottom: 0px;
-  }
+  } */
 }
 
 @media (max-width: 450px) {
